--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "decompress": "^4.2.1",
-    "decompress-zip": "^0.3.2",
-    "drivelist": "^6.4.6",
-    "express": "^4.17.1",
-    "fs-extra": "^7.0.1",
-    "multer": "^1.4.1",
-    "pug": "^3.0.1"
+    "decompress-zip": "^0.3.3",
+    "drivelist": "^11.0.0",
+    "express": "^4.18.1",
+    "fs-extra": "^10.1.0",
+    "multer": "^1.4.5-lts.1",
+    "pug": "^3.0.2"
   }
 }
